--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <tr><td><H3> Prof. Martin Speight</H3></td></tr>
 <tr><td>
 <table>
-<tr><td>E-mail:</td><td>speight<IMG src="at.gif" width=14>maths.leeds.ac.uk</td></tr>
+<tr><td>E-mail:</td><td>speight"in"maths.leeds.ac.uk, where "in" is replaced by the usual symbol</td></tr>
 <tr>
 <td>Telephone:</td>
 <td>(0113) 343 5169</td></tr>
