--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ Leeds LS2 9JT, UK.</td>
 
 
 <ul>
-<li><a href="research">Research Interests</a></li>
+<li><a href="research/index.html">Research Interests</a></li>
 <li><a href="http://arxiv.org/a/speight_j_1">Publications</a> (preprints on the arXiv)</li>
 <li><a href="https://scholar.google.co.uk/citations?user=OXfJjLkAAAAJ&hl=en">Google scholar page</a>(publication list with bibliographic and citation data) </li>
-<li><a href="collaborators">Past and Present Collaborators</a></li>
-<li><a href="talks">Talks</a></li>
+<li><a href="collaborators/index.html">Past and Present Collaborators</a></li>
+<li><a href="talks/index.html">Talks</a></li>
 <li><a href="http://www.maths.leeds.ac.uk/index.php?id=263&uid=1073">Official Webpage</li>
 </ul>
 
