--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Leeds LS2 9JT, UK.</td>
 <li><a href="https://scholar.google.co.uk/citations?user=OXfJjLkAAAAJ&hl=en">Google scholar page</a>(publication list with bibliographic and citation data) </li>
 <li><a href="collaborators/index.html">Past and Present Collaborators</a></li>
 <li><a href="talks/index.html">Talks</a></li>
-<li><a href="http://www.maths.leeds.ac.uk/index.php?id=263&uid=1073">Official Webpage</li>
+<li><a href="https://eps.leeds.ac.uk/maths/staff/4079/professor-martin-speight">Official Webpage</li>
 </ul>
 
 <BR><HR>
