--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <picture>
  <source media="(min-width: 800px)" srcset="elx.jpg">
  <source media="(min-width: 450px)" srcset="elx1.jpg">
-<IMG width=50% src="http://www1.maths.leeds.ac.uk/~speight/elx.jpg">
+<IMG width=50% src="elx.jpg">
 </picture></td>
 <td>
 <table>
