--- a/collaborators/index.html
+++ b/collaborators/index.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.or
+g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+   <link href="../main.css" rel="stylesheet" type="text/css" />
+   <title>Martin Speight</title>
+
+<script type="text/JavaScript">
+<!--
+    function navbarMenu(targ,selObj,restore){
+      eval(targ+".location='"+selObj.options[selObj.selectedIndex].value+"'");
+      if (restore) selObj.selectedIndex=0;
+}
+//-->
+</script>
+</head>
+
+<body>
+
+
+
+
+
+<H2>Past and Present Collaborators</H2>
+
+
+<a href="http://www.math.ksu.edu/main/">Dave Auckly</a>
+Kansas State University.<BR>
+<a href="http://www.physics.umass.edu/people/egor-babaev">Egor Babaev</a>
+University of Massachusetts at Amherst.<BR>
+<a href="http://www.theophys.kth.se/~johan/Johan_Carlstrom.html">Johan Carlstrom</a>
+KTH, Stockholm.<BR>
+<a href="http://www.physics.umass.edu/people/julien-garaud">Julien Garaud</a>
+University of Massachusetts at Amherst.<BR>
+<a href="http://www.lboro.ac.uk/departments/maths/staff/dr-derek-harland.html"> Derek Harland</a>
+University of Loughborough.<BR>
+<a href="http://www3.imperial.ac.uk/people/m.haskins">Mark Haskins</a> 
+Imperial College, London.<BR>
+<a href="http://www.nordita.org/people/staff/index.php?u=jaykka">Juha J&auml;ykk&auml;</a> 
+Nordita, Stockholm.<BR>
+<a href="http://www.kent.ac.uk/smsas/maths/our-people/profiles/krusch_steffen.html">Steffen Krusch</a>
+University of Kent.<BR>
+<a href="http://www.damtp.cam.ac.uk/user/nsm10/">Nick Manton</a>
+University of Cambridge.<BR>
+<a href="http://home.imf.au.dk/nromao/">Nuno Rom&atilde;o</a> 
+University of Aarhus.<BR>
+<a href="h">Lorenzo Sadun</a>
+University of Texas at Austin.<BR>
+<a href="t">Yakov Shnir</a>
+Belarusian State University.<BR>
+<a href="http://www.maths.gla.ac.uk/~iabs/">Ian Strachan</a>
+University of Glasgow.<BR>
+<a href="http://maths.dur.ac.uk/~dma0pms">Paul Sutcliffe</a> University of Durham.<BR>
+<a href="http://www.imada.sdu.dk/~svensson">Martin Svensson</a> Odense University.<BR>
+<a href="http://www.maths.dur.ac.uk/~dma0rsw">Richard Ward</a> University of Durham.<BR>
+
+<BR><HR>
+
+     <FONT SIZE=-1>
+     [<A HREF="http://www.leeds.ac.uk/"> University of Leeds </A>]
+     [<A HREF="http://www.amsta.leeds.ac.uk/"> Mathematics </A>]
+     [<A HREF="http://www.amsta.leeds.ac.uk/pure/"> Pure </A>]
+     [<A HREF="http://www.amsta.leeds.ac.uk/Applied/"> Applied </A>]
+     [<A HREF="http://www.amsta.leeds.ac.uk/Statistics/"> Statistics </A>]
+  
+
+
+
+
+         
+
+</body>
+</html>
 
