--- a/talks/index.html
+++ b/talks/index.html
@@ -1,1 +1,129 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.or
+g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+   <link href="../main.css" rel="stylesheet" type="text/css" />
+   <title>Martin Speight</title>
 
+<script type="text/JavaScript">
+<!--
+    function navbarMenu(targ,selObj,restore){
+      eval(targ+".location='"+selObj.options[selObj.selectedIndex].value+"'");
+      if (restore) selObj.selectedIndex=0;
+}
+//-->
+</script>
+</head>
+
+<body>
+
+
+
+
+
+<H2>Research Talks</H2>
+
+
+<ul>
+<li><a href="SCGP2.pdf">The L2 geometry of moduli spaces of P1 vortices</a> Novel Vistas on Vortices, Simons Centre for Geometry and Physics, 11/11/19.
+
+<li><a href="sko.pdf">Skyrmions coupled to omega mesons</a> Topological Solitons, Nonperturbative Gauge Dynamics and
+Confinement 2,
+Pisa, 19/7/19.
+
+<li><a href="SIG8.pdf">Skyrmions in frustrated ferromagnets at low
+applied magnetic field</a> SIG VIII, Krakow, 27/6/19.
+
+<li><a href="bristol-1.pdf">Complex length scales in anisotropic multicomponent superconductors</a> Frontiers in Condensed Matter Physics 2019, Bristol, 10/1/19.
+
+<li><a href="P1vortex_talk_Keio.pdf">The geometry of the space of vortex-antivortex
+pairs</a> Keio University, Japan, 26/9/18.
+<li><a href="P1vortex_talk_KIAS_short.pdf">The geometry of the space of vortex-antivortex
+pairs</a> Korean Institute for Advanced Study, Seoul, 20/9/18.
+<li><a href="BE.pdf">Skyrmions with low binding energies</a> 1st APCTP-TRIUMF Joint Workshop on Understanding Nuclei
+from Different Theoretical Approaches, Pohang, Korea, 15/9/18.
+<li><a href="P1vortex_talk_loughborough.pdf">The geometry of the space of vortices</a> Integrable Dynamics minisymposium, Dynamics Days Europe, Loughborough 3/9/18.
+<li><a href="mass.pdf">Mass splitting in the Skyrme model</a> Low Energy Effective Dynamics of Skyrmions, Leeds, 4/7/18.
+<li><a href="omega_krakow.pdf">Omega mesons and skyrmions</a> SIG VII, Krakow, 25/6/18.
+<li><a href="bristol.pdf">Non-monotonic vortex interactions and type 1.5 superconductivity</a> Correlated Electron Systems seminar, Bristol, 14/11/17.
+<li><a href="P1vortex_talk_cambridge.pdf">The geometry of the space of BPS vortex-antivortex
+pairs</a> Math Phys seminar, Cambridge, 16/5/17.
+<li><a href="augsburg.pdf">The adiabatic limit of wave map flow in (2+1) dimensions</a> Geometry Seminar, University of Augsburg, 14/11/16.
+<li><a href="point_skyrmions.pdf">
+Point particle models of
+lightly bound skyrmions</a> 2nd Workshop on Geometric Models of Nuclear Matter, University of Kent, 14/9/16.
+<li><a href="dissolving_talk.pdf">Geometry of dissolving vortices</a> SIG V, Krakow, 20/6/16.
+<li><a href="P1vortex_talk_YDGD.pdf">Geometry of vortex moduli spaces</a> YDGD York 4/11/15.
+<li><a href="pmcuasga.pdf">The geometry of the space of BPS vortex-antivortex
+pairs</a> SIG IV, Krakow, 26/6/15.
+<li><a href="P1vortex_talk.pdf">The geometry of the moduli space of
+P<sup>1</sup> vortex-antivortex pairs</a> University of Glasgow, 27/3/15. 
+<li><a href="giwil.pdf">Extreme Skyrmions and restricted harmonic maps</a> 
+UK-Japan Winter School on Topology and Integrability, Loughborough, 6/1/15.
+<li><a href="klmfaohk.pdf">The L<sup>2</sup> geometry of the space of
+P<sup>1</sup> vortex-antivortex pairs</a> Gauged Sigma Models, Simons Centre for Geometry and Physics, 4/11/14. 
+<li><a href="rhm.pdf">Near BPS Skyrmions and restricted harmonic maps</a> 
+Geometric Models of Nuclear Matter workshop, Kent, 18/8/14.
+<li><a href="rmgtalk.pdf">Ricci magnetic geodesic motion of vortices and lumps</a> 
+Jagiellonian University, Cracow, 17/6/14</li>
+<li><a href="near_bps_cracow.pdf">The geometry of near BPS Skyrme models</a> 
+Jagiellonian University, Cracow, 7/6/13</li>
+<li><a href="IGNORANCE_IS_STRENGTH.pdf">Fermionic quantization of knot solitons</a> 
+Workshop "Quantized flux in tightly knoted systems", Newton Institute, Cambridge, 7/12/12.</li>
+<li><a href="near_bps_skyrme.pdf">Near BPS Skyrme models and restricted harmonic maps</a> 
+University of Durham, 21/11/12.</li>
+<li><a href="bonn.pdf">Vortices and the L<sup>2</sup> volume of spaces of holomorphic maps</a> 
+Hausdorff Institute, Bonn, 2/10/12.</li>
+<li><a href="crystals_cambridge.pdf">Solitons on tori and soliton crystals</a> 
+Cambridge University, 20/9/12.
+<li><a href="crystals_santiago.pdf">Solitons on tori and soliton crystals</a> 
+University of Santiago de Compostela, Spain, 12/9/12.
+<li><a href="crystals.pdf">Solitons on tori and soliton crystals</a> 
+Mathematical Physics workshop, BMC 2012, Kent, 18/4/12.
+<li><a href="halkidiki.pdf">Long range vortex interactions and type 1.5 superconductivity</a> 1st Symposium on Analysis and Quantum Field Theory, ICNAAM11,
+Halkidki, Greece, 20/9/11.
+<li><a href="ql.pdf">Quantum dynamics of a CP1 lump on the two-sphere</a> Aristotle University of Thessaloniki, Greece, 16/9/11.
+<li><a href="wardfest.pdf">Wave map flow on a compact Riemann surface</a> LMS Workshop "Geometry and Physics" in honour of Richard Ward, Durham, 7/9/11.
+<li><a href="odense_bfn.pdf">Knot solitons in two-component Ginzburg-Landau theory</a> University of Southern Denmark, 18/5/11.
+<li><a href="http://www.newton.ac.uk/programmes/MOS/seminars/022415301.html">
+The L<sup>2</sup> geometry of vortex moduli spaces</a> Newton Institute, 
+Cambridge, 24/2/11.
+<li><a href="warwick.pdf">Intervortex forces in two-component Ginzburg-Landau theory and type 1.5 superconductivity</a> University of Warwick, 10/2/11
+<li><a href="odense.pdf">Geometry and dynamics of vortex solitons</a>
+3rd Winter School on Geometry and Physics, Odense, Denmark, 1-5/11/10
+<li><a href="imperial.pdf">The sigma-model limit of two-component Ginzburg-Landau theory</a> 
+Imperial College, 25/5/10</li>
+<li><a href="curious.pdf">A curious limit of the Faddeev-Skyrme model</a> 
+Variational problems in integrable systems and geometry, Leeds, 15/5/10</li>
+<li><a href="magic.pdf">The geometry of soliton moduli spaces</a> 
+MAGIC Postgraduate Conference, Leeds, 14/12/09</li>
+<li><a href="cracow.pdf">Wave-map flow and the geometry of the space of holomorphic maps</a> 
+Jagiellonian University, Cracow, 9/11/09</li>
+<li><a href="lms.pdf">Solitons and point particles</a> 
+University of Leeds, 28/7/09</li>
+<li><a href="kent.pdf">The adiabatic limit of wave map flow</a>
+University of Kent, 15/12/08</li>
+<li><a href="superFS.pdf">Supercurrent coupling in the abstract Faddeev-Skyrme model</a> University of Tours, 28/11/08</li>
+<li><a href="wave_maps.pdf">The adiabatic limit of wave map flow</a>
+University of Leeds, 14/11/08</li>
+</ul>
+
+<BR><HR>
+
+     <FONT SIZE=-1>
+     [<A HREF="http://www.leeds.ac.uk/"> University of Leeds </A>]
+     [<A HREF="http://www.amsta.leeds.ac.uk/"> Mathematics </A>]
+     [<A HREF="http://www.amsta.leeds.ac.uk/pure/"> Pure </A>]
+     [<A HREF="http://www.amsta.leeds.ac.uk/Applied/"> Applied </A>]
+     [<A HREF="http://www.amsta.leeds.ac.uk/Statistics/"> Statistics </A>]
+  
+
+
+
+
+         
+
+</body>
+</html>
