--- a/collaborators/index.html
+++ b/collaborators/index.html
@@ -33,8 +33,8 @@ University of Massachusetts at Amherst.<BR>
 KTH, Stockholm.<BR>
 <a href="http://www.physics.umass.edu/people/julien-garaud">Julien Garaud</a>
 University of Massachusetts at Amherst.<BR>
-<a href="http://www.lboro.ac.uk/departments/maths/staff/dr-derek-harland.html"> Derek Harland</a>
-University of Loughborough.<BR>
+<a href="https://eps.leeds.ac.uk/maths/staff/4034/dr-derek-harland"> Derek Harland</a>
+University of Leeds.<BR>
 <a href="http://www3.imperial.ac.uk/people/m.haskins">Mark Haskins</a> 
 Imperial College, London.<BR>
 <a href="http://www.nordita.org/people/staff/index.php?u=jaykka">Juha J&auml;ykk&auml;</a> 
