--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <tr><td><H3> Prof. Martin Speight</H3></td></tr>
 <tr><td>
 <table>
-<tr><td>E-mail:</td><td>speight"in"maths.leeds.ac.uk, where "in" is replaced by the usual symbol</td></tr>
+<tr><td>E-mail:</td><td>j.m.speight"in"leeds.ac.uk, where "in" is replaced by the usual symbol</td></tr>
 <tr>
 <td>Telephone:</td>
 <td>(0113) 343 5169</td></tr>
@@ -73,11 +73,8 @@ Leeds LS2 9JT, UK.</td>
 
      <FONT SIZE=-1>
      [<A HREF="http://www.leeds.ac.uk/"> University of Leeds </A>]
-     [<A HREF="http://www.amsta.leeds.ac.uk/"> Mathematics </A>]
-     [<A HREF="http://www.amsta.leeds.ac.uk/pure/"> Pure </A>]
-     [<A HREF="http://www.amsta.leeds.ac.uk/Applied/"> Applied </A>]
-     [<A HREF="http://www.amsta.leeds.ac.uk/Statistics/"> Statistics </A>]
-  
+     [<A HREF="https://eps.leeds.ac.uk/maths/"> Mathematics </A>]
+     
 
 
 
