--- a/talks/index.html
+++ b/talks/index.html
@@ -27,6 +27,9 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 
 <ul>
+   <li><a href="https://www.youtube.com/watch?v=RLsYMcnmK4g">Topological Defects in Multicomponent Ginzburg Landau Theory</a>  SIG IX, Krakow, 30/6/21.
+   
+   
 <li><a href="SCGP2.pdf">The L2 geometry of moduli spaces of P1 vortices</a> Novel Vistas on Vortices, Simons Centre for Geometry and Physics, 11/11/19.
 
 <li><a href="sko.pdf">Skyrmions coupled to omega mesons</a> Topological Solitons, Nonperturbative Gauge Dynamics and
