--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Leeds LS2 9JT, UK.</td>
 <ul>
 <li><a href="research/index.html">Research Interests</a></li>
 <li><a href="http://arxiv.org/a/speight_j_1">Publications</a> (preprints on the arXiv)</li>
-<li><a href="https://scholar.google.co.uk/citations?user=OXfJjLkAAAAJ&hl=en">Google scholar page</a>(publication list with bibliographic and citation data) </li>
+<li><a href="https://scholar.google.co.uk/citations?user=OXfJjLkAAAAJ&hl=en">Google scholar page</a>(a publication list with bibliographic and citation data) </li>
 <li><a href="collaborators/index.html">Past and Present Collaborators</a></li>
 <li><a href="talks/index.html">Talks</a></li>
 <li><a href="https://eps.leeds.ac.uk/maths/staff/4079/professor-martin-speight">Official Webpage</li>
