--- a/mamnuuc/notes/Ch9.html
+++ b/mamnuuc/notes/Ch9.html
@@ -140,6 +140,84 @@ Interpret this result in terms of differentiability.</span></p>
 <div class="section level2">
 
 <h2 class="ltx_title ltx_title_section" style="font-size:120%;">
+<span class="ltx_tag ltx_tag_section header-section-number">9.2</span> Problem Set 2: Differentiability on an interval</h2>
+
+<div id="S2.p1" class="ltx_para">
+<p class="ltx_p ltx_align_right"><span class="ltx_text ltx_font_italic" style="font-size:120%;">Submit on Gradescope by 17:00, Friday 25 February 2022</span></p>
+</div>
+<div id="S2.p2" class="ltx_para">
+<ol id="S2.I1" class="ltx_enumerate">
+<li id="S2.I1.i1" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">1.</span></span><div id="S2.I1.i1.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">Prove that, for all </span><math id="S2.I1.i1.p1.m1" class="ltx_Math" alttext="x\in{\mathbb{R}}" display="inline"><mrow><mi mathsize="120%">x</mi><mo mathsize="120%" stretchy="false">∈</mo><mi mathsize="120%">ℝ</mi></mrow></math><span class="ltx_text" style="font-size:120%;">, </span><math id="S2.I1.i1.p1.m2" class="ltx_Math" alttext="|\sin x|\leq|x|" display="inline"><mrow><mrow><mo maxsize="120%" minsize="120%">|</mo><mrow><mi mathsize="120%">sin</mi><mo>⁡</mo><mi mathsize="120%">x</mi></mrow><mo maxsize="120%" minsize="120%">|</mo></mrow><mo mathsize="120%" stretchy="false">≤</mo><mrow><mo maxsize="120%" minsize="120%">|</mo><mi mathsize="120%">x</mi><mo maxsize="120%" minsize="120%">|</mo></mrow></mrow></math><span class="ltx_text" style="font-size:120%;">.</span></p>
+</div>
+</li>
+<li id="S2.I1.i2" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">2.</span></span><div id="S2.I1.i2.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">Prove that the function </span><math id="S2.I1.i2.p1.m1" class="ltx_Math" alttext="f:{\mathbb{R}}\rightarrow{\mathbb{R}}" display="inline"><mrow><mi mathsize="120%">f</mi><mo mathsize="120%" stretchy="false">:</mo><mrow><mi mathsize="120%">ℝ</mi><mo mathsize="120%" stretchy="false">→</mo><mi mathsize="120%">ℝ</mi></mrow></mrow></math><span class="ltx_text" style="font-size:120%;">, </span><math id="S2.I1.i2.p1.m2" class="ltx_Math" alttext="f(x)=4x^{7}-14x^{4}+30x-17" display="inline"><mrow><mrow><mi mathsize="120%">f</mi><mo>⁢</mo><mrow><mo maxsize="120%" minsize="120%">(</mo><mi mathsize="120%">x</mi><mo maxsize="120%" minsize="120%">)</mo></mrow></mrow><mo mathsize="120%" stretchy="false">=</mo><mrow><mrow><mrow><mrow><mn mathsize="120%">4</mn><mo>⁢</mo><msup><mi mathsize="120%">x</mi><mn mathsize="120%">7</mn></msup></mrow><mo mathsize="120%" stretchy="false">-</mo><mrow><mn mathsize="120%">14</mn><mo>⁢</mo><msup><mi mathsize="120%">x</mi><mn mathsize="120%">4</mn></msup></mrow></mrow><mo mathsize="120%" stretchy="false">+</mo><mrow><mn mathsize="120%">30</mn><mo>⁢</mo><mi mathsize="120%">x</mi></mrow></mrow><mo mathsize="120%" stretchy="false">-</mo><mn mathsize="120%">17</mn></mrow></mrow></math><span class="ltx_text" style="font-size:120%;">, is injective.</span></p>
+</div>
+</li>
+<li id="S2.I1.i3" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">3.</span></span><div id="S2.I1.i3.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">Let </span><math id="S2.I1.i3.p1.m1" class="ltx_Math" alttext="f:{\mathbb{R}}\rightarrow{\mathbb{R}}" display="inline"><mrow><mi mathsize="120%">f</mi><mo mathsize="120%" stretchy="false">:</mo><mrow><mi mathsize="120%">ℝ</mi><mo mathsize="120%" stretchy="false">→</mo><mi mathsize="120%">ℝ</mi></mrow></mrow></math><span class="ltx_text" style="font-size:120%;"> such that </span><math id="S2.I1.i3.p1.m2" class="ltx_Math" alttext="f(x)=2x^{4}+x^{4}\sin(1/x)" display="inline"><mrow><mrow><mi mathsize="120%">f</mi><mo>⁢</mo><mrow><mo maxsize="120%" minsize="120%">(</mo><mi mathsize="120%">x</mi><mo maxsize="120%" minsize="120%">)</mo></mrow></mrow><mo mathsize="120%" stretchy="false">=</mo><mrow><mrow><mn mathsize="120%">2</mn><mo>⁢</mo><msup><mi mathsize="120%">x</mi><mn mathsize="120%">4</mn></msup></mrow><mo mathsize="120%" stretchy="false">+</mo><mrow><msup><mi mathsize="120%">x</mi><mn mathsize="120%">4</mn></msup><mo>⁢</mo><mrow><mi mathsize="120%">sin</mi><mo>⁡</mo><mrow><mo maxsize="120%" minsize="120%">(</mo><mrow><mn mathsize="120%">1</mn><mo mathsize="120%" stretchy="false">/</mo><mi mathsize="120%">x</mi></mrow><mo maxsize="120%" minsize="120%">)</mo></mrow></mrow></mrow></mrow></mrow></math><span class="ltx_text" style="font-size:120%;"> if </span><math id="S2.I1.i3.p1.m3" class="ltx_Math" alttext="x\neq 0" display="inline"><mrow><mi mathsize="120%">x</mi><mo mathsize="120%" stretchy="false">≠</mo><mn mathsize="120%">0</mn></mrow></math><span class="ltx_text" style="font-size:120%;">, and </span><math id="S2.I1.i3.p1.m4" class="ltx_Math" alttext="f(0)=0" display="inline"><mrow><mrow><mi mathsize="120%">f</mi><mo>⁢</mo><mrow><mo maxsize="120%" minsize="120%">(</mo><mn mathsize="120%">0</mn><mo maxsize="120%" minsize="120%">)</mo></mrow></mrow><mo mathsize="120%" stretchy="false">=</mo><mn mathsize="120%">0</mn></mrow></math><span class="ltx_text" style="font-size:120%;">.</span></p>
+<ol id="S2.I1.i3.I1" class="ltx_enumerate">
+<li id="S2.I1.i3.I1.i1" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">(a)</span></span><div id="S2.I1.i3.I1.i1.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">Prove that </span><math id="S2.I1.i3.I1.i1.p1.m1" class="ltx_Math" alttext="f" display="inline"><mi mathsize="120%">f</mi></math><span class="ltx_text" style="font-size:120%;"> attains a minimum at </span><math id="S2.I1.i3.I1.i1.p1.m2" class="ltx_Math" alttext="0" display="inline"><mn mathsize="120%">0</mn></math><span class="ltx_text" style="font-size:120%;">. </span><span class="ltx_text ltx_font_italic" style="font-size:120%;">(Hint: no need for calculus!)</span><span class="ltx_text" style="font-size:120%;"></span></p>
+</div>
+</li>
+<li id="S2.I1.i3.I1.i2" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">(b)</span></span><div id="S2.I1.i3.I1.i2.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">Prove that </span><math id="S2.I1.i3.I1.i2.p1.m1" class="ltx_Math" alttext="f" display="inline"><mi mathsize="120%">f</mi></math><span class="ltx_text" style="font-size:120%;"> is differentiable (everywhere), and that </span><math id="S2.I1.i3.I1.i2.p1.m2" class="ltx_Math" alttext="f^{\prime}(0)=0" display="inline"><mrow><mrow><msup><mi mathsize="120%">f</mi><mo mathsize="120%" stretchy="false">′</mo></msup><mo>⁢</mo><mrow><mo maxsize="120%" minsize="120%">(</mo><mn mathsize="120%">0</mn><mo maxsize="120%" minsize="120%">)</mo></mrow></mrow><mo mathsize="120%" stretchy="false">=</mo><mn mathsize="120%">0</mn></mrow></math><span class="ltx_text" style="font-size:120%;">. </span><span class="ltx_text ltx_font_italic" style="font-size:120%;">(Hint: you can reduce the work involved using the Localization Lemma, Lemma <a href="Ch2.html#Thmthm24a" title="Lemma 2.24 (Localization Lemma) ‣ 2.3 Open sets and the Localization Lemma ‣ Chapter 2 Differentiable functions ‣ MATH2017 Real Analysis" class="ltx_ref"><span class="ltx_text ltx_ref_tag"><span class="ltx_text" style="font-size:120%;">2.24</span></span></a>.)</span><span class="ltx_text" style="font-size:120%;"></span></p>
+</div>
+</li>
+<li id="S2.I1.i3.I1.i3" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">(c)</span></span><div id="S2.I1.i3.I1.i3.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">Prove that, for all </span><math id="S2.I1.i3.I1.i3.p1.m1" class="ltx_Math" alttext="\varepsilon&gt;0" display="inline"><mrow><mi mathsize="120%">ε</mi><mo mathsize="120%" stretchy="false">&gt;</mo><mn mathsize="120%">0</mn></mrow></math><span class="ltx_text" style="font-size:120%;">, </span><math id="S2.I1.i3.I1.i3.p1.m2" class="ltx_Math" alttext="f^{\prime}" display="inline"><msup><mi mathsize="120%">f</mi><mo mathsize="120%" stretchy="false">′</mo></msup></math><span class="ltx_text" style="font-size:120%;"> takes both positive and negative values on </span><math id="S2.I1.i3.I1.i3.p1.m3" class="ltx_Math" alttext="(-\varepsilon,\varepsilon)" display="inline"><mrow><mo maxsize="120%" minsize="120%">(</mo><mrow><mo mathsize="120%" stretchy="false">-</mo><mi mathsize="120%">ε</mi></mrow><mo mathsize="120%" stretchy="false">,</mo><mi mathsize="120%">ε</mi><mo maxsize="120%" minsize="120%">)</mo></mrow></math><span class="ltx_text" style="font-size:120%;">.</span></p>
+</div>
+</li>
+</ol>
+</div>
+</li>
+<li id="S2.I1.i4" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">4.</span></span><div id="S2.I1.i4.p1" class="ltx_para">
+<ol id="S2.I1.i4.I1" class="ltx_enumerate">
+<li id="S2.I1.i4.I1.i1" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">(a)</span></span><div id="S2.I1.i4.I1.i1.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">Construct the first Taylor approximant to </span><math id="S2.I1.i4.I1.i1.p1.m1" class="ltx_Math" alttext="f:(-1,1)\rightarrow{\mathbb{R}}" display="inline"><mrow><mi mathsize="120%">f</mi><mo mathsize="120%" stretchy="false">:</mo><mrow><mrow><mo maxsize="120%" minsize="120%">(</mo><mrow><mo mathsize="120%" stretchy="false">-</mo><mn mathsize="120%">1</mn></mrow><mo mathsize="120%" stretchy="false">,</mo><mn mathsize="120%">1</mn><mo maxsize="120%" minsize="120%">)</mo></mrow><mo mathsize="120%" stretchy="false">→</mo><mi mathsize="120%">ℝ</mi></mrow></mrow></math><span class="ltx_text" style="font-size:120%;">, </span><math id="S2.I1.i4.I1.i1.p1.m2" class="ltx_Math" alttext="f(x)=\sin^{-1}x" display="inline"><mrow><mrow><mi mathsize="120%">f</mi><mo>⁢</mo><mrow><mo maxsize="120%" minsize="120%">(</mo><mi mathsize="120%">x</mi><mo maxsize="120%" minsize="120%">)</mo></mrow></mrow><mo mathsize="120%" stretchy="false">=</mo><mrow><msup><mi mathsize="120%">sin</mi><mrow><mo mathsize="120%" stretchy="false">-</mo><mn mathsize="120%">1</mn></mrow></msup><mo>⁡</mo><mi mathsize="120%">x</mi></mrow></mrow></math><span class="ltx_text" style="font-size:120%;"> about </span><math id="S2.I1.i4.I1.i1.p1.m3" class="ltx_Math" alttext="a=\frac{1}{2}" display="inline"><mrow><mi mathsize="120%">a</mi><mo mathsize="120%" stretchy="false">=</mo><mfrac><mn mathsize="120%">1</mn><mn mathsize="120%">2</mn></mfrac></mrow></math><span class="ltx_text" style="font-size:120%;">.</span></p>
+</div>
+</li>
+<li id="S2.I1.i4.I1.i2" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">(b)</span></span><div id="S2.I1.i4.I1.i2.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">Use this approximant, and Taylor’s Theorem, to find upper and lower bounds on </span><math id="S2.I1.i4.I1.i2.p1.m1" class="ltx_Math" alttext="\sin^{-1}(3/4)" display="inline"><mrow><msup><mi mathsize="120%">sin</mi><mrow><mo mathsize="120%" stretchy="false">-</mo><mn mathsize="120%">1</mn></mrow></msup><mo>⁡</mo><mrow><mo maxsize="120%" minsize="120%">(</mo><mrow><mn mathsize="120%">3</mn><mo mathsize="120%" stretchy="false">/</mo><mn mathsize="120%">4</mn></mrow><mo maxsize="120%" minsize="120%">)</mo></mrow></mrow></math><span class="ltx_text" style="font-size:120%;">.</span></p>
+</div>
+</li>
+</ol>
+</div>
+</li>
+<li id="S2.I1.i5" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">5.</span></span><div id="S2.I1.i5.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">In each of the following cases, either write down a function with the specified properties, or explain why no such function exists.</span></p>
+<ol id="S2.I1.i5.I1" class="ltx_enumerate">
+<li id="S2.I1.i5.I1.i1" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">(a)</span></span><div id="S2.I1.i5.I1.i1.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">An unbounded function </span><math id="S2.I1.i5.I1.i1.p1.m1" class="ltx_Math" alttext="f:[0,1]\rightarrow{\mathbb{R}}" display="inline"><mrow><mi mathsize="120%">f</mi><mo mathsize="120%" stretchy="false">:</mo><mrow><mrow><mo maxsize="120%" minsize="120%">[</mo><mn mathsize="120%">0</mn><mo mathsize="120%" stretchy="false">,</mo><mn mathsize="120%">1</mn><mo maxsize="120%" minsize="120%">]</mo></mrow><mo mathsize="120%" stretchy="false">→</mo><mi mathsize="120%">ℝ</mi></mrow></mrow></math><span class="ltx_text" style="font-size:120%;">.</span></p>
+</div>
+</li>
+<li id="S2.I1.i5.I1.i2" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">(b)</span></span><div id="S2.I1.i5.I1.i2.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">An unbounded differentiable function </span><math id="S2.I1.i5.I1.i2.p1.m1" class="ltx_Math" alttext="f:[0,1]\rightarrow{\mathbb{R}}" display="inline"><mrow><mi mathsize="120%">f</mi><mo mathsize="120%" stretchy="false">:</mo><mrow><mrow><mo maxsize="120%" minsize="120%">[</mo><mn mathsize="120%">0</mn><mo mathsize="120%" stretchy="false">,</mo><mn mathsize="120%">1</mn><mo maxsize="120%" minsize="120%">]</mo></mrow><mo mathsize="120%" stretchy="false">→</mo><mi mathsize="120%">ℝ</mi></mrow></mrow></math><span class="ltx_text" style="font-size:120%;">.</span></p>
+</div>
+</li>
+<li id="S2.I1.i5.I1.i3" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">(c)</span></span><div id="S2.I1.i5.I1.i3.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">A bounded differentiable function </span><math id="S2.I1.i5.I1.i3.p1.m1" class="ltx_Math" alttext="f:{\mathbb{R}}\rightarrow{\mathbb{R}}" display="inline"><mrow><mi mathsize="120%">f</mi><mo mathsize="120%" stretchy="false">:</mo><mrow><mi mathsize="120%">ℝ</mi><mo mathsize="120%" stretchy="false">→</mo><mi mathsize="120%">ℝ</mi></mrow></mrow></math><span class="ltx_text" style="font-size:120%;"> whose derivative </span><math id="S2.I1.i5.I1.i3.p1.m2" class="ltx_Math" alttext="f^{\prime}:{\mathbb{R}}\rightarrow{\mathbb{R}}" display="inline"><mrow><msup><mi mathsize="120%">f</mi><mo mathsize="120%" stretchy="false">′</mo></msup><mo mathsize="120%" stretchy="false">:</mo><mrow><mi mathsize="120%">ℝ</mi><mo mathsize="120%" stretchy="false">→</mo><mi mathsize="120%">ℝ</mi></mrow></mrow></math><span class="ltx_text" style="font-size:120%;"> is unbounded.</span></p>
+</div>
+</li>
+<li id="S2.I1.i5.I1.i4" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item"><span class="ltx_text" style="font-size:120%;">(d)</span></span><div id="S2.I1.i5.I1.i4.p1" class="ltx_para">​<p class="ltx_p"><span class="ltx_text" style="font-size:120%;">A differentiable function </span><math id="S2.I1.i5.I1.i4.p1.m1" class="ltx_Math" alttext="f:(0,1)\rightarrow{\mathbb{R}}" display="inline"><mrow><mi mathsize="120%">f</mi><mo mathsize="120%" stretchy="false">:</mo><mrow><mrow><mo maxsize="120%" minsize="120%">(</mo><mn mathsize="120%">0</mn><mo mathsize="120%" stretchy="false">,</mo><mn mathsize="120%">1</mn><mo maxsize="120%" minsize="120%">)</mo></mrow><mo mathsize="120%" stretchy="false">→</mo><mi mathsize="120%">ℝ</mi></mrow></mrow></math><span class="ltx_text" style="font-size:120%;"> which is unbounded above but whose derivative is bounded.</span></p>
+</div>
+</li>
+</ol>
+</div>
+</li>
+</ol>
+</div>
+<div class="ltx_pagination ltx_role_newpage"></div>
+</div>
+</section>
+<section id="S3" class="ltx_section normal">
+<div class="section level2">
+
+<h2 class="ltx_title ltx_title_section" style="font-size:120%;">
 <a href="Ch8.html" class="navigation navigation-prev" aria-label="Previous page"><i class="fa fa-angle-left"></i></a><a href="Ch10.html" class="navigation navigation-next" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
 </div>
 </div>
