--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Leeds LS2 9JT, UK.</td>
 </tr>
 <tr>
 <td>Department:</td>
-<td><A HREF="http://www.amsta.leeds.ac.uk/pure/">Pure Mathematics</A></td>
+<td><A HREF="https://eps.leeds.ac.uk/maths-pure-mathematics">Pure Mathematics</A></td>
 </tr>
 <tr>
 <td>Research Group:</TD>
