--- a/talks/index.html
+++ b/talks/index.html
@@ -25,8 +25,10 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <H2>Research Talks</H2>
 
-
 <ul>
+   <li><a href="leeds_symposium.pdf">Exotic magnetic structures in multicomponent superconductors</a>  24th Symposium on Quantum Matter and High Energy Physics, Leeds, 7/6/22.
+
+
    <li><a href="https://www.youtube.com/watch?v=RLsYMcnmK4g">Topological Defects in Multicomponent Ginzburg Landau Theory</a>  SIG IX, Krakow, 30/6/21.
    
    
