--- a/collaborators/index.html
+++ b/collaborators/index.html
@@ -24,36 +24,40 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <H2>Past and Present Collaborators</H2>
 
-
-<a href="http://www.math.ksu.edu/main/">Dave Auckly</a>
+<a href="https://www.usc.gal/en/department/particle-physics/directory/christoph-adam-150053">Christoph Adam</a> University of Santiagon de Compestela.<BR>
+<a href="https://www.researchgate.net/profile/Lamia-Alqahtani">Lamia Alqahtani</a> King Abdulaziz University.<BR>
+<a href="https://www.math.ksu.edu/~dav/">Dave Auckly</a>
 Kansas State University.<BR>
-<a href="http://www.physics.umass.edu/people/egor-babaev">Egor Babaev</a>
-University of Massachusetts at Amherst.<BR>
-<a href="http://www.theophys.kth.se/~johan/Johan_Carlstrom.html">Johan Carlstrom</a>
-KTH, Stockholm.<BR>
-<a href="http://www.physics.umass.edu/people/julien-garaud">Julien Garaud</a>
-University of Massachusetts at Amherst.<BR>
+<a href="https://www.kth.se/profile/babaev">Egor Babaev</a>
+KTH Stockholm.<BR>
+<a href="https://www.su.se/english/profiles/joca6685-1.342701l">Johan Carlstrom</a>
+Stockholm University.<BR>
+<a href="https://orcid.org/0000-0001-5087-3115">Julien Garaud</a>
+University of Tours.<BR>
+<a href="http://bjarke.gudnason.net">Bjarke Gudnason, Henan University.<BR>
 <a href="https://eps.leeds.ac.uk/maths/staff/4034/dr-derek-harland"> Derek Harland</a>
 University of Leeds.<BR>
-<a href="http://www3.imperial.ac.uk/people/m.haskins">Mark Haskins</a> 
-Imperial College, London.<BR>
+<a href="https://scholars.duke.edu/person/Mark.Haskins">Mark Haskins</a> 
+Duke University.<BR>
 <a href="http://www.nordita.org/people/staff/index.php?u=jaykka">Juha J&auml;ykk&auml;</a> 
 Nordita, Stockholm.<BR>
-<a href="http://www.kent.ac.uk/smsas/maths/our-people/profiles/krusch_steffen.html">Steffen Krusch</a>
+<a href="https://www.kent.ac.uk/mathematics-statistics-actuarial-science/people/963/krusch-steffenl">Steffen Krusch</a>
 University of Kent.<BR>
 <a href="http://www.damtp.cam.ac.uk/user/nsm10/">Nick Manton</a>
 University of Cambridge.<BR>
-<a href="http://home.imf.au.dk/nromao/">Nuno Rom&atilde;o</a> 
-University of Aarhus.<BR>
+<a href="https://www.uni-math.gwdg.de/nromao//">Nuno Rom&atilde;o</a> 
+University of Goettingen.<BR>
 <a href="h">Lorenzo Sadun</a>
 University of Texas at Austin.<BR>
-<a href="t">Yakov Shnir</a>
+<a href="http://theor.jinr.ru/~shnir/">Yakov Shnir</a>
 Belarusian State University.<BR>
 <a href="http://www.maths.gla.ac.uk/~iabs/">Ian Strachan</a>
 University of Glasgow.<BR>
 <a href="http://maths.dur.ac.uk/~dma0pms">Paul Sutcliffe</a> University of Durham.<BR>
-<a href="http://www.imada.sdu.dk/~svensson">Martin Svensson</a> Odense University.<BR>
+<a href="https://portal.findresearcher.sdu.dk/en/persons/svensson">Martin Svensson</a> Odense University.<BR>
 <a href="http://www.maths.dur.ac.uk/~dma0rsw">Richard Ward</a> University of Durham.<BR>
+<a href="https://scholar.google.com/citations?user=EjD27SgAAAAJ&hl=pl">Andrzej Wereszczynski</a> Jagiellonian University<BR>
+<a href="https://orcid.org/0000-0002-7923-5739">Tom Winyard</a> University of Kent.<BR>
 
 <BR><HR>
 
