--- a/collaborators/index.html
+++ b/collaborators/index.html
@@ -34,7 +34,7 @@ KTH Stockholm.<BR>
 Stockholm University.<BR>
 <a href="https://orcid.org/0000-0001-5087-3115">Julien Garaud</a>
 University of Tours.<BR>
-<a href="http://bjarke.gudnason.net">Bjarke Gudnason, Henan University.<BR>
+<a href="http://bjarke.gudnason.net">Bjarke Gudnason</a> Henan University.<BR>
 <a href="https://eps.leeds.ac.uk/maths/staff/4034/dr-derek-harland"> Derek Harland</a>
 University of Leeds.<BR>
 <a href="https://scholars.duke.edu/person/Mark.Haskins">Mark Haskins</a> 
