--- a/talks/index.html
+++ b/talks/index.html
@@ -26,6 +26,8 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <H2>Research Talks</H2>
 
 <ul>
+<li><a href="https://www.youtube.com/watch?v=zoHOUD2XfG0">Geometry of vortices on the sphere in the dissolving limit</a> SIG X, Krakow 23/6/22.
+
    <li><a href="leeds_symposium.pdf">Exotic magnetic structures in multicomponent superconductors</a>  24th Symposium on Quantum Matter and High Energy Physics, Leeds, 7/6/22.
 
 
