--- a/talks/index.html
+++ b/talks/index.html
@@ -26,6 +26,9 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <H2>Research Talks</H2>
 
 <ul>
+<li><a href="Vorlesung.pdf">The L<sup>2</sup> geometry of the moduli space of vortices on the two-sphere in the dissolving limit
+</a> Gauged Maps, Vortices and Their Moduli, Les Diablerets, Swtizerland, 22/8/22.
+
 <li><a href="dissolving_kent.pdf">Geometry of vortices on the sphere in the dissolving limit</a> Geometric Models of Nuclear Matter, University of Kent, 21/7/22.
 <li><a href="https://www.youtube.com/watch?v=zoHOUD2XfG0">Geometry of vortices on the sphere in the dissolving limit</a> SIG X, Krakow 23/6/22.
 
