--- a/mamnuuc/haipatikani/index.html
+++ b/mamnuuc/haipatikani/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url='https://cp1lump.github.io/mamnuuc/notes/'" />
+<meta http-equiv="refresh" content="0; url=https://cp1lump.github.io/mamnuuc/math2017/" />
