--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -46,6 +46,10 @@ Digits separated by a white dot must be consecutive.
 Digits separated by a black dot must be in a 1:2 ratio.
 
 Digits in every consecutive triple of cells, horizontal and vertical, must sum to a multiple of 3. 
+
+<li><a href="https://f-puzzles.com/?id=2ju9smyy">Hogwarts Killer</a><br>
+<IMG width=25% src="hogwarts_killer.png"><br>
+Normal Sudoku rules apply. Within a cage, digits sum to the clue in the corner. Every box is either mod 3 magic or mod 3 muggle. In a mod 3 magic box, every row, column and diagonal sums to the same total modulo 3. In a mod 3 muggle box, no pair of orthogonally connected cells may contain digits summing to a multiple of 3.
 </ul>
 
 
