--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Leeds LS2 9JT, UK.</td>
 </tr>
 <tr>
 <td>Research Group:</TD>
-<td><A HREF="http://www.amsta.leeds.ac.uk/pure/geometry/">Differential Geometry</A></td>
+<td><A HREF="https://leeds-geometry.github.io">Differential Geometry</A></td>
 </tr>       
 </TABLE></td></tr>
 </TABLE></td></tr>
