--- a/talks/index.html
+++ b/talks/index.html
@@ -26,6 +26,9 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <H2>Research Talks</H2>
 
 <ul>
+<li><a href="dissolving_york.pdf">The L<sup>2</sup> geometry of the moduli space of vortices on the two-sphere in the dissolving limit
+</a> York Geometry and Mathematical Physics seminar, 4/10/22.
+
 <li><a href="Vorlesung.pdf">The L<sup>2</sup> geometry of the moduli space of vortices on the two-sphere in the dissolving limit
 </a> Gauged Maps, Vortices and Their Moduli, Les Diablerets, Swtizerland, 22/8/22.
 
