launch MATH2017 page

--- a/mamnuuc/hadda/index.html
+++ b/mamnuuc/hadda/index.html
@@ -1,1 +1,40 @@
-Under construction
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.or
+g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+   <link href="../../main.css" rel="stylesheet" type="text/css" />
+   <title>Martin Speight</title>
+
+
+</head>
+
+<body>
+
+
+<H2>MATH2017 Real Analysis</H2>
+
+<ul>
+<li><a href="contact.pdf">Introductory handout: contact details, assessment arrangements etc.</a>
+<li><a href="notes">Lecture notes</a>
+<li><a href="problems">Problem sheets and solutions</a>
+<li><a href="workshops">Workshop problems and solutions</a>
+</ul>
+
+
+<BR><HR>
+
+     <FONT SIZE=-1>
+     [<A HREF="http://www.leeds.ac.uk/"> University of Leeds </A>]
+     [<A HREF="https://eps.leeds.ac.uk/maths/"> Mathematics </A>]
+     [<a href="https://cp1lump.github.io/">Martin Speight</a>]
+ 
+
+
+
+
+         
+
+</body>
+</html>
