--- a/mamnuuc/hadda/index.html
+++ b/mamnuuc/hadda/index.html
@@ -20,6 +20,7 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <li><a href="notes">Lecture notes</a>
 <li><a href="problems">Problem sheets and solutions</a>
 <li><a href="workshops">Workshop problems and solutions</a>
+<li><a href="notes_1026.pdf">Revision material: notes for MATH1026 as taught 2021/2022</a>
 </ul>
 
 
