--- a/mamnuuc/hadda/notes/index.html
+++ b/mamnuuc/hadda/notes/index.html
@@ -19,7 +19,7 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <ul>
 <li><a href="notes1.pdf">Chapter 1: Limits of sequences</a>
-<li><a href="notes2.pdf">Chapter 2: Limits of functions and continuity</a>
+<li><a href="chapter2">Chapter 2: Limits of functions and continuity</a>
 <li><a href="notes3.pdf">Chapter 3: Differentiable functions</a>
 <li><a href="notes4.pdf">Chapter 4: Functions differentiable on an interval</a>
 <li><a href="notes5.pdf">Chapter 5: Integration</a>
