--- a/talks/index.html
+++ b/talks/index.html
@@ -30,7 +30,8 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <a href="https://www.youtube.com/watch?v=dAuXCnGNIFI">Lecture 1</a> 
 <a href="https://www.youtube.com/watch?v=NfQaAAr3zHo">Lecture 2</a> 
 <a href="https://www.youtube.com/watch?v=5c5s2WAPHU0">Lecture 3</a> 
-<a href="https://www.youtube.com/watch?v=ylZoiGS0yzQ">Lecture 4</a> 
+<a href="https://www.youtube.com/watch?v=ylZoiGS0yzQ">Lecture 4</a>
+<a href="minicourse.pdf">Typed notes</a> by Jes&uacutes Aguado.
 
 <li><a href="dissolving_york.pdf">The L<sup>2</sup> geometry of the moduli space of vortices on the two-sphere in the dissolving limit
 </a> York Geometry and Mathematical Physics seminar, 4/10/22.
