--- a/mamnuuc/hadda/notes/index.html
+++ b/mamnuuc/hadda/notes/index.html
@@ -26,6 +26,7 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <li><a href="notes6.pdf">Chapter 6: The Fundamental Theorem of the Calculus</a>
 <li><a href="notes7.pdf">Chapter 7: Uniform convergence</a>
 <li><a href="notes8.pdf">Chapter 8: Power series</a>
+<li><a href="notes.pdf">Complete notes</a> with the gaps filled in
 </ul>
 
 
