--- a/mamnuuc/hadda/index.html
+++ b/mamnuuc/hadda/index.html
@@ -21,6 +21,8 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <li><a href="problems">Problem sheets and solutions</a>
 <li><a href="workshops">Workshop problems and solutions</a>
 <li><a href="notes_1026.pdf">Revision material: notes for MATH1026 as taught 2021/2022</a>
+<li><a href="talk.pdf">Slides from the final Q and A session on exam preparation</a>
+<li><a href="2022.pdf">The final exam from 2022</a>
 </ul>
 
 
