--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ printImage();
 <li><a href="talks/index.html">Talks</a></li>
 <li><a href="sudoku/index.html">Sudoku</a></li>
 <li><a href="https://eps.leeds.ac.uk/maths/staff/4079/professor-martin-speight">Official Webpage</li>
+<li><a href="https://leeds-maths-pgr.github.io/conf-2023/">School of Mathematics PGR conference</a>
 </ul>
 
 <BR><HR>
