--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -51,8 +51,11 @@ Digits in every consecutive triple of cells, horizontal and vertical, must sum t
 <IMG width=25% src="hogwarts_killer.png"><br>
 Normal Sudoku rules apply. Within a cage, digits sum to the clue in the corner. Every box is either mod 3 magic or mod 3 muggle. In a mod 3 magic box, every row, column and diagonal sums to the same total modulo 3. In a mod 3 muggle box, no pair of orthogonally connected cells may contain digits summing to a multiple of 3.
 <br> <i> Hint: before you start, you'll find it useful to prove the following "theorem": In any completed sudoku box, at least one row, column or diagonal sums to a multiple of 3.</i>
-</ul>
 
+<li><a href="https://f-puzzles.com/?id=2pmmngak">Pfeilfluestern</a><br>
+<IMG width=25% src="Pfeilfluestern3.png"><br>
+Normal sudoku rule apply. Neighbouring digits along a green line must differ by at least 5. Digits along an arrow sum to the digit in the attached circle. Digits in a cage sum to the total in its top left corner. Digits separated by a white dot are consecutive.
+<br>
 
 <BR><HR>
 
