shift MATH2017 to permanent repository

--- a/mamnuuc/hadda/index.html
+++ b/mamnuuc/hadda/index.html
@@ -15,17 +15,7 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <H2>MATH2017 Real Analysis</H2>
 
-<ul>
-<li><a href="contact2.pdf">Introductory handout: contact details, assessment arrangements etc.</a>
-<li><a href="notes">Lecture notes</a>
-<li><a href="problems">Problem sheets and solutions</a>
-<li><a href="workshops">Workshop problems and solutions</a>
-<li><a href="notes_1026.pdf">Revision material: notes for MATH1026 as taught 2021/2022</a>
-<li><a href="talk.pdf">Slides from the final Q and A session on exam preparation</a>
-<li><a href="2022.pdf">The final exam from 2022</a>
-<li><a href="2019.pdf">The final exam from 2019</a>
-
-</ul>
+Content moved to <a href="https://cp1lump.github.io/mamnuuc/math2017/2022/">here</a>
 
 
 <BR><HR>
