--- a/mamnuuc/math2017/index.html
+++ b/mamnuuc/math2017/index.html
@@ -26,6 +26,7 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <ul>
 <li><a href="2022">As taught in academic year 2021/2022</a>
+<li><a href="2023">As taught in academic year 2022/2023</a>
 </ul>
 
 
