add birmingham talk

--- a/talks/index.html
+++ b/talks/index.html
@@ -26,6 +26,8 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <H2>Research Talks</H2>
 
 <ul>
+<li><a href="crystal_talk_birmingham_safe.pdf">Soliton crystals
+</a> University of Birmingham, 25/4/24.
 <li><a href="salamanca.pdf">The pseudovortex approximation to vortices at high density</a> Nonlinear Phenomena in Soliton Dynamics, Salamanca, 11/4/24.
 <li><a href="skyrme_crystals_sig.pdf">Skyrme crystals
 </a> SIG XI, Jagielonian University, Krakow 19/6/23.
