upload sig talk

--- a/talks/index.html
+++ b/talks/index.html
@@ -26,11 +26,12 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <H2>Research Talks</H2>
 
 <ul>
+<li><a href="sig12.pdf">Vortex lattices in anisotropic superconductors</a> SIG XII, Jagiellonian University, Krakow, 25/6/24.
 <li><a href="crystal_talk_birmingham.pdf">Soliton crystals
 </a> University of Birmingham, 25/4/24.
 <li><a href="salamanca.pdf">The pseudovortex approximation to vortices at high density</a> Nonlinear Phenomena in Soliton Dynamics, Salamanca, 11/4/24.
 <li><a href="skyrme_crystals_sig.pdf">Skyrme crystals
-</a> SIG XI, Jagielonian University, Krakow 19/6/23.
+</a> SIG XI, Jagiellonian University, Krakow 19/6/23.
 <li><a href="P1_vortex_talk_prague.pdf">L<sup>2</sup> geometry of vortices
 </a> Prague Spring Amplitudes 2023, 17/5/23.
 <li><a href="skyrme_crystals.pdf">Skyrme crystals
