--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -57,6 +57,16 @@ Normal Sudoku rules apply. Within a cage, digits sum to the clue in the corner. 
 Normal sudoku rule apply. Neighbouring digits along a green line must differ by at least 5. Digits along an arrow sum to the digit in the attached circle. Digits in a cage sum to the total in its top left corner. Digits separated by a white dot are consecutive.
 <br>
 
+
+<li><a href="https://f-puzzles.com/?id=238avqg6">50:50:50</a><br>
+<IMG width=25% src="50_50_50.png"><br>
+Normal sudoku rules apply. Each cage is of one of three types: in a Scott cage, the digits sum to 50; in a Kelly cage, the product of the digits is 50; in a Chris cage, the sum of the squares of the digits is 50.
+
+The purple lines are Renban lines: digits along a line must form a consecutive non-repeating set, not necessarily in order.
+
+Cells with a grey circle contain odd digits.
+
+Happy birthday Scott, Kelly and Chris!
 <BR><HR>
 
      <FONT SIZE=-1>
