--- a/talks/index.html
+++ b/talks/index.html
@@ -26,6 +26,8 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <H2>Research Talks</H2>
 
 <ul>
+<li><a href="vortices_on_T2_talk.pdf">Two vortex dynamics on flat tori</a> Nonlinear Phenomena in Soliton Dynamics 2, Salamanca, 31/3/25.
+<li><a href="ydgd_york_2025.pdf">L<sup>2</sup> geometry of vortices</a> Yorkshire and Durham Geometry Day, University of York, 26/3/25.
 <li><a href="sig12.pdf">Vortex lattices in anisotropic superconductors</a> SIG XII, Jagiellonian University, Krakow, 25/6/24.
 <li><a href="crystal_talk_birmingham.pdf">Soliton crystals
 </a> University of Birmingham, 25/4/24.
