--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Leeds LS2 9JT, UK.</td>
 </tr>
 <tr>
 <td>Research Group:</TD>
-<td><A HREF="https://leeds-geometry.github.io">Differential Geometry</A></td>
+<td><A HREF="https://leeds-geometry.github.io">Geometry and Analysis</A></td>
 </tr>       
 </TABLE></td></tr>
 </TABLE></td>
@@ -81,6 +81,8 @@ printImage();
 <li><a href="http://arxiv.org/a/speight_j_1">Publications</a> (preprints on the arXiv)</li>
 <li><a href="https://scholar.google.co.uk/citations?user=OXfJjLkAAAAJ&hl=en">Google scholar page</a> (a publication list with bibliographic and citation data) </li>
 <li><a href="https://link.springer.com/journal/11040">Mathematical Physics, Analysis and Geometry</a> is a Springer journal, the geometry section of which I am (jointly with <a href="https://www.math.uwaterloo.ca/~bcharbon/">Benoit Charbonneau</a>) Editor in Chief.
+<li><a href="https://www.emis.de/journals/SIGMA/topological-solitons.html">Special issue of SIGMA</a> in honour of Nick Manton's 70th birthday (co-edited with <a href="https://scholar.google.com/citations?user=DWrNjpQAAAAJ&amp;hl=en">Bernd Schroers</a> and 
+<a href="https://www.durham.ac.uk/staff/p-m-sutcliffe/">Paul Sutcliffe</a>)</li>
 <li><a href="talks/index.html">Talks</a></li>
 <li><a href="sudoku/index.html">Sudoku</a></li>
 <li><a href="https://eps.leeds.ac.uk/maths/staff/4079/professor-martin-speight">Official Webpage</li>
