--- a/talks/index.html
+++ b/talks/index.html
@@ -26,6 +26,9 @@ g/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <H2>Research Talks</H2>
 
 <ul>
+<li><a href="vortices_krakow.pdf">Vortices: moduli space and dynamics</a> 
+mini lecture course at Summer school "Non-pertrubative phenomena and solitons", Jagiellonian University, Krakow, 17-20/6/25.
+Notes by Nora Gavrea. 
 <li><a href="dipole_talk.pdf">Dipole interactions in chiral ferromagnets</a> Physics and Mathematics of Topological Textures, Budapest, 16/5/25.
 <li><a href="vortices_on_T2_talk.pdf">Two vortex dynamics on flat tori</a> Nonlinear Phenomena in Soliton Dynamics 2, Salamanca, 31/3/25.
 <li><a href="ydgd_york_2025.pdf">L<sup>2</sup> geometry of vortices</a> Yorkshire and Durham Geometry Day, University of York, 26/3/25.
